Fix early JDK 21 compilation warnings and test on 21-ea
Ensure forward-compatibility with the new Java LTS